--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-nav></app-nav>
 <div id = "wrapper">
-    <app-sidebar></app-sidebar>
-    <app-home></app-home>
+        <app-sidebar></app-sidebar>
+    <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
 
