--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,29 +1,29 @@
 <!-- Sidebar -->
 <ul class="sidebar navbar-nav">
-  <li class="nav-item active">
-    <a class="nav-link" href="index.html">
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/dashboard">
       <i class="fas fa-fw fa-tachometer-alt"></i>
-      <span>Dashboard</span>
+      <span> Dashboard</span>
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="portfolio.html">
-      <i class="fas fa-fw fa-chart-area"></i>
-      <span>Portfolio</span></a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="charts.html">
-      <i class="fas fa-fw fa-chart-area"></i>
-      <span>Watchlist</span></a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="tables.html">
+    <a class="nav-link" routerLink="/portfolio">
       <i class="fas fa-fw fa-table"></i>
-      <span>Advisors</span></a>
+      <span> Portfolio</span></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/watchlist">
+      <i class="fas fa-fw fa-table"></i>
+      <span> Watchlist</span></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/advisors">
+      <i class="fas fa-fw fa-chart-area"></i>
+      <span> Advisors</span></a>
   </li>
 <li class="nav-item">
-    <a class="nav-link" href="tables.html">
-      <i class="fas fa-fw fa-table"></i>
-      <span>Performance</span></a>
+    <a class="nav-link" routerLink="/performance">
+      <i class="fas fa-fw fa-chart-area"></i>
+      <span> Performance</span></a>
   </li>
 </ul>
