--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,10 +1,17 @@
-<h1>Login to Your Account</h1><br>
-      <form>
-      <input type="text" name="user" placeholder="Username">
-      <input type="password" name="pass" placeholder="Password">
-      <input type="submit" name="login" class="login loginmodal-submit" value="Login">
+<div class="container">
+      <h1>Login Form</h1>
+      <form #loginForm="ngForm">
+        <div class="form-group">
+          <label for="name">Username</label>
+          <input type="text" class="form-control" id="username2" [formControl] = "username2">
+        </div>
+    
+        <div class="form-group">
+          <label for="alterEgo">Password</label>
+          <input type="text" class="form-control" id="password2" required [formControl] = "password2">
+        </div>
+    
+        <button type="button" class="btn btn-dark" (click)="login()">Login</button>
+    
       </form>
-      
-      <div class="login-help">
-      <a href="#">Register</a> - <a href="#">Forgot Password</a>
-      </div>
+    </div>
