--- a/src/app/component/nav/nav.component.html
+++ b/src/app/component/nav/nav.component.html
@@ -36,7 +36,7 @@
         <div class="modal-body">Are you sure you want to logout?</div>
         <div class="modal-footer">
           <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary" routerLink="/home">Yes</a>
+          <button class="btn btn-secondary" type = button (click) = "logout()">Yes</button>
         </div>
      </div>
   </div>
