login done-ish route guards needs work

--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
 <ul>
-  <li *ngFor="let user of users | async">
+  <li>
     {{ user.username }}
+
+    (refresh the page to navigate)
   </li>
-</ul>>
+</ul>
