--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -11,6 +11,6 @@
           <input type="text" class="form-control" id="password2" required [formControl] = "password2">
         </div>
     
-        <button type="button" class="btn btn-dark" (click)="login()">Login</button>
+        <button type="button" class="btn btn-dark" (click)="login()" data-dismiss="modal">Login</button>
       </form>
     </div>
