--- a/src/app/component/sidebar/sidebar.component.html
+++ b/src/app/component/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <!-- Sidebar -->
-<ul class="sidebar navbar-nav">
+<ul class="sidebar navbar-nav" *ngIf="sidebar.visible">
   <li class="nav-item">
     <a class="nav-link" routerLink="/dashboard">
       <i class="fas fa-fw fa-tachometer-alt"></i>
