nav and sidebar fixes, starting on dashboard

--- a/src/app/component/advisors/advisors.component.html
+++ b/src/app/component/advisors/advisors.component.html
@@ -1,3 +1,7 @@
-<p>
-  advisors works!
-</p>
+<app-nav></app-nav>
+  <div id = "wrapper">     
+    <app-sidebar></app-sidebar>
+      <p>
+        advisors works!
+      </p>
+<app-footer></app-footer>
