--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -2,12 +2,12 @@
       <h1>Login Form</h1>
       <form #loginForm="ngForm">
         <div class="form-group">
-          <label for="name">Username</label>
+          <label for="username2">Username</label>
           <input type="text" class="form-control" id="username2" [formControl] = "username2">
         </div>
     
         <div class="form-group">
-          <label for="alterEgo">Password</label>
+          <label for="password2">Password</label>
           <input type="text" class="form-control" id="password2" required [formControl] = "password2">
         </div>
     
