--- a/src/app/component/nav/nav.component.html
+++ b/src/app/component/nav/nav.component.html
@@ -1,27 +1,28 @@
-<nav class="navbar navbar-expand navbar-dark bg-dark static-top" *ngIf="nav.visible">
+<nav class="navbar navbar-expand navbar-dark bg-dark fixed-top" *ngIf="nav.visible">
 
-  <a class="navbar-brand mr-1" href="index.html" routerLink="/">FIAT</a>
-
-  <!-- Navbar -->
-  <ul class="navbar-nav ml-auto">
-    <li class="nav-item dropdown no-arrow mx-1">
-      <a class="nav-link dropdown-toggle" id="homeButton" role="button" routerLink="/home">
-        <i class="fas fa-home fa-fw"></i>
-      </a>
-    </li>
-    <li class="nav-item dropdown no-arrow">
-      <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <i class="fas fa-user-circle fa-fw"></i>
-      </a>
-      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-        <a class="dropdown-item" href="#">Profile Settings</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">Logout</a>
-      </div>
-    </li>
-  </ul>
-
-</nav>
+    <a class="navbar-brand mr-1" href="index.html" routerLink="/">FIAT</a>
+  
+    <!-- Navbar -->
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item dropdown no-arrow mx-1">
+        <a class="nav-link dropdown-toggle" id="homeButton" role="button" routerLink="/home">
+          <i class="fas fa-home fa-fw"></i>
+        </a>
+      </li>
+      <li class="nav-item dropdown no-arrow">
+        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          {{user.firstname}} {{user.lastname}}
+          <i class="fas fa-user-circle fa-fw"></i>
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
+          <a class="dropdown-item" href="#">Profile Settings</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">Logout</a>
+        </div>
+      </li>
+    </ul>
+  
+  </nav>
 
 <!-- Logout Modal-->
 <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
