--- a/src/app/component/portfolio/portfolio.component.html
+++ b/src/app/component/portfolio/portfolio.component.html
@@ -1,3 +1,8 @@
-<p>
-  portfolio works!
-</p>
+<app-nav></app-nav>
+<div id = "wrapper">     
+  <app-sidebar></app-sidebar>
+    <p>
+      portfolio works!
+    </p>
+  </div>
+<app-footer></app-footer>
