--- a/src/app/component/sidebar/sidebar.component.html
+++ b/src/app/component/sidebar/sidebar.component.html
@@ -1,24 +1,21 @@
 <!-- Sidebar -->
-<ul class="sidebar navbar-nav" *ngIf="sidebar.visible">
-  <li class="nav-item">
-    <a class="nav-link" routerLink="/dashboard">
-      <i class="fas fa-fw fa-tachometer-alt"></i>
-      <span> Dashboard</span>
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" routerLink="/portfolio">
-      <i class="fas fa-fw fa-table"></i>
-      <span> Portfolio</span></a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" routerLink="/advisors">
-      <i class="fas fa-fw fa-chart-area"></i>
-      <span> Advisors</span></a>
-  </li>
-<li class="nav-item">
-    <a class="nav-link" routerLink="/performance">
-      <i class="fas fa-fw fa-chart-area"></i>
-      <span> Performance</span></a>
-  </li>
-</ul>
+<div id="sidebar-container" class="sidebar-expanded d-none d-md-block">
+  <ul class="list-group sidebar sticky-top sticky-offset" *ngIf="sidebar.visible">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/dashboard">
+          <i class="fas fa-fw fa-tachometer-alt"></i>
+          <span> Dashboard</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/portfolio">
+          <i class="fas fa-fw fa-table"></i>
+          <span> Portfolio</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/advisors">
+          <i class="fas fa-fw fa-chart-area"></i>
+          <span> Advisors</span></a>
+      </li>
+    </ul>
+</div>
