--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
     <div id="dashboard-content">
     <div class="container-fluid">
       <!-- Page Heading -->
-        <h1 style="text-align:center" class="h3 mb-2 text-gray-800">Dashboard</h1>
+        <h1 style="text-align:center" class="h3 mb-2 text-gray-1000">Dashboard</h1>
 
         <div class="row">
         <!--right half of the page-->
@@ -182,6 +182,11 @@
         
         <!--right half of the page-->
         <div class="col-6">
+
+            <div>
+                <canvas #dashboardChart>{{ chart }}</canvas>
+            </div>
+
             <div class="card shadow mb-4">
                 <div class="card-header py-3">
                   <h6 class="m-0 font-weight-bold text-primary">Advisor Highlights</h6>
