--- a/src/app/component/portfolio/add-asset/add-asset.component.html
+++ b/src/app/component/portfolio/add-asset/add-asset.component.html
@@ -1,177 +1,107 @@
 <app-nav></app-nav>
-<div id="wrapper">
-  <app-sidebar></app-sidebar>
-  <div id="add-asset-content">
-    <div class="container-fluid">
-        <h6 id="heading2">Asset - {{myAsset.symbol}}  - OVERVIEW <button [routerLink]="['/Transactions/add', myAsset.symbol, displayAsset.shares]" routerLinkActive="active" type="button" >Trade</button></h6>
-        <div id="container">
-        <div id="leftForm">
-            <div id="heading">CURRENT PRICE   ${{displayAsset.price}} PER SHARE   </div>  
-                        <label for="newPrice">New Price </label>
-                        <input type="number" class="form-control" id="newPrice" placeholder="price per share" 
-                        required [(ngModel)]="newPrice" #symbol="ngModel" name="newPrice" >
-                        <button type="button" (click)="updatePrice(newPrice)" >UPDATE PRICE</button>
-            <table id="Margin1 tableClean">
-                    <thead>
-                        <tr>
-                                <th></th>
-                                <th>SHARES</th>
-                                <th>AVG PRICE</th>
-                                <th>CURRENT PRICE</th>
-                                <th>CURRENT TOTAL</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                                <td id="gold">CURRENT</td>
-                                <td>{{displayAsset.shares}}</td>
-                                <td>${{displayAsset.avgprice}}</td>
-                                <td>${{displayAsset.price}}</td>
-                                <td>${{displayAsset.currentTotal}}</td>
-                        </tr>
-                    </tbody>
-                    <thead>
-                        <tr>
-                                <th></th>
-                                <th>SOLD SHARES</th>
-                                <th>AVG PRICE SOLD</th>
-                                <th>TOTAL $ SOLD</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                                <td id="gold">SOLD</td>
-                                <td>{{displayAsset.sharesSold}}</td>
-                                <td>${{displayAsset.avgpriceSold}}</td>
-                                <td>${{displayAsset.totalMoneyOut}}</td>
-                        </tr>
-                    </tbody>
-                    <thead>
-                        <tr>
-                            <th></th>
-                            <th>REALIZED</th>
-                            <th>MARGIN</th>
-                            <th>UNREALIZED</th>
-                            <th>MARGIN</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr></tr>
-                        <tr>
-                            <td id="gold">PROFIT</td>
-                            <td>${{displayAsset.realProfit}}</td>
-                            <td>%{{displayAsset.realMargin}}</td>
-                            <td>${{displayAsset.unRealProfit}}</td>
-                            <td>%{{displayAsset.unRealMargin}}</td>
-                        </tr>
-                    </tbody>
-                    <thead>
-                        <tr>
-                            <th></th>
-                            <th>TOTAL $ INVESTED</th>
-                            <th>TOTAL $ WITHDRAWN</th>
-                            <th>ORIGINAL $ LEFT</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr></tr>
-                        <tr>
-                        <td id="gold">MORE INFROMATION</td>
-                        <td>${{displayAsset.totalMoneyIn}}</td>
-                        <td>${{displayAsset.totalMoneyOut}}</td>
-                        <td>${{displayAsset.originalMoney}}</td>
-                        </tr>
-                    </tbody>
-                </table>       
-                <table id="Margin1">
-                    <thead>
-                        <tr>
-                            <th></th>
-                            <th id="heading">WHAT IF SCENARIO</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                                <td>What if I sold at this price right now?</td>
-                                
-                                
-                                <td>
-                                <form #form="ngForm">
-                                    <div class="form-group">
-                                        <label for="whatIfPrice">Price</label>
-                                        <input type="number" class="form-control" placeholder="price" id="whatIfPrice"
-                                            required pattern="^\d{0,4}(\.\d{0,2})?$"
-                                            [(ngModel)]="whatIf.whatIfPrice" #whatIfPrice="ngModel" name="whatIfPrice" >
-                                        <div [hidden]="whatIfPrice.valid || whatIfPrice.pristine"
-                                            class="alert alert-danger">
-                                            Invalid price
-                                        </div>
-                                    </div>
-                                </form>
-                                </td>
-                                <td><button type="button" (click)="whatIfScenario(whatIfPrice)">WHAT IF?</button></td>
-                        </tr>
-                        <tr>
-                            <td>Total Money I would Get</td>
-                            <td>${{whatIf.totalMoneyOut}}</td>
-                        </tr>
-                        <tr>
-                            <td>Pure Profit</td>
-                            <td>${{whatIf.pureProfit}}</td>
-                        </tr>
-                        <tr>
-                            <td>Margin</td>
-                            <td>%{{whatIf.pureProfitMargin}}</td>
-                        </tr>
-                        <tr>
-                            <td>HOW MANY SHARES DO I NEED TO SELL TO GET MY ORIGINAL MONEY BACK?</td>
-                            <td>{{whatIf.sharesToSell}}</td>
-                        </tr>
-                    </tbody>
-                </table>
-        </div>
-        <div id="rightForm">
-                <ul class="nav justify-content-center">
-                        <li class="nav-item">
-                                <button (click)="displayTransactions('true')" style="color:whitesmoke; background-color:green">ONLY BOUGHT TRANSACTIONS</button>
-                        </li>
-                        <li class="nav-item">
-                                <button (click)="displayTransactions('false')" style="color:whitesmoke; background-color:red">ONLY SOLD TRANSACTIONS</button>
-                        </li>
-                        <li class="nav-item">
-                                <button (click)="displayTransactions('all')" style="color:black; background-color:whitesmoke" >ALL TRANSACTIONS</button>
-                        </li>
-                    </ul>
-            <p id="heading">MY TRANSACTIONS</p>
-                <table id="tableClean">
-                        <thead>
-                        <tr>
-                            <th>Shares</th>
-                            <th>Price</th>
-                            <th>Date</th>
-                            <th>Total</th>
-                            <th>Gain</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                            
-                        <tr *ngFor="let transaction of transactions" 
-                        [style.background-color]="transaction.transaction == false ? 'red' : 'green'" 
-                        style="color:white">
-                            <td>{{ transaction.shares }}</td>
-                            <td>${{ transaction.price }}</td>
-                            <td>{{ transaction.buydate }}</td>   
-                            <td>${{ transaction.total }}</td>
-                            <td>{{transaction.total}}%</td>
-                            <br>
-                        </tr>
-                        
-                        </tbody>
-                    </table>
-        </div>
+  <div id = "wrapper">
+    <app-sidebar></app-sidebar>
+    <!-- Begin Page Content -->
+    <h3 style="color:royalblue">Add New Transaction</h3>
+    <hr>
+    <div [hidden]="submitted" class="container">
+      
+    </div>
+    <hr>
+    
+    <div [hidden]="submitted">
+        <form #transactionForm="ngForm" [ngStyle]="{'color':setTransaction()}">
+    
+          <div class="form-group">
+            <label for="symbol">Company Symbol</label>
+            <input style="color:yellow" type="text" class="form-control" id="symbol" placeholder="Give Companies symbol" 
+            required maxlength="6" pattern="([0-9A-Za-z.]{1,6})" autofocus 
+            [(ngModel)]="Transaction.symbol" name="symbol" #symbol="ngModel">
+            <div [hidden]="symbol.valid || symbol.pristine"
+                 class="alert alert-danger">
+                The symbol is not valid
+            </div>
+          </div>
+          
+            <div class="form-group">
+            <label for="shares">Amount of shares: maximum is 999,999 <p>{{shareCount}}</p></label>
+            <input style="color:yellow" type="number" class="form-control" id="shares" placeholder="Number of shares" 
+            required  pattern="([0-9]{1,6})"
+            [(ngModel)]="Transaction.shares" name="shares" #shares="ngModel">
+            <div [hidden]="shares.valid || shares.pristine"
+                 class="alert alert-danger">
+                Invlid number of shares
+            </div>
+          </div>
+         
+            <div class="form-group">
+            <label for="price">Price: maximum is $9999.99</label>
+            <input style="color:yellow" type="number" class="form-control" id="price" placeholder="price per share" 
+            required pattern="^\d{0,4}(\.\d{0,2})?$"  
+            [(ngModel)]="Transaction.price" name="price" #price="ngModel">
+            <div [hidden]="price.valid || price.pristine"
+                 class="alert alert-danger">
+                Invalid price
+            </div>
+          </div>
+          
+              <div class="form-group">
+            <label for="buydate">Transaction Date </label>
+            <input  type="date" class="form-control" id="buydate" placeholder="date purchased" 
+            required
+            [(ngModel)]="Transaction.buydate" name="buydate" #buydate="ngModel">
+            <div [hidden]="buydate.valid || buydate.pristine"
+                 class="alert alert-danger">
+                date is required
+            </div>
+          </div>
         
+          <div class="form-group">
+            <div class="row">
+              <div>  
+                <p>Transaction Type</p>
+                <ul class="nav justify-content-center">
+                    <li class="nav-item"  style="color:white ; background-color: green">
+                        <label class="radioButton">BUY
+                        <input  type="radio" class="form-control" name="Buy" id="Buy"
+                        required [value]="true"
+                        [(ngModel)]="Transaction.transaction" #Buy="ngModel" >
+                        <span class="checkmark"></span>
+                        </label> 
+                    </li>
+                    <li class="nav-item"  style="color:white ; background-color: red">
+                            <label class="radioButton">SELL
+                            <input  type="radio" class="form-control" name="transaction" id="transaction"
+                            required [value]="false" 
+                            [(ngModel)]="Transaction.transaction" #transaction="ngModel" >
+                            <span class="checkmark"></span>
+                            </label> 
+                    </li>
+                </ul>  
+               
+                <div [hidden]="transaction.valid || transaction.pristine"
+                 class="alert alert-danger">
+                 transaction type is required
+                </div>
+              </div>
+            </div>
+          </div>
+    
+          <div class="btn-group btn-group-md">
+            <button type="button" class="btn btn-dark" (click)="goBack()">Back</button>
+              <button type="button" class="btn btn-dark" (click)="grabAsset(Transaction.symbol)" [disabled]="!transactionForm.form.valid" >Submit</button>      
+            <button type="button" class="btn btn-dark" (click)="newTransaction()" >Clear</button>
+          </div>
+        </form>
+    </div>
+    
+    <div [hidden]="!submitted">
+      <p>Submitted Successfully!<span class="badge badge-light"></span></p>
+     
+      <div class="btn-group btn-group-sm">
+            <button type="button" class="btn btn-dark" (click)="goBack()">Back</button>
+            <button type="button" class="btn btn-dark" (click)="newTransaction(); transactionForm.reset()">Add Another Transaction</button>
         </div>
     </div>
-  </div>
-</div>
+<app-footer></app-footer>
 
