--- a/src/app/component/portfolio/current-portfolio/current-portfolio.component.css
+++ b/src/app/component/portfolio/current-portfolio/current-portfolio.component.css
@@ -4,3 +4,18 @@
     padding-bottom: 50px;
     width: 100%;
 }
+
+table, th, td
+{
+    border: 1px solid white;
+    padding:0 15px 0 15px;
+    background-color:blue;
+    color:white;
+}
+
+button {
+    background-color:blue;
+    color:white;
+    border-radius: 8px;
+    width: 75px;
+}
