--- a/src/app/component/nav/nav.component.html
+++ b/src/app/component/nav/nav.component.html
@@ -15,14 +15,22 @@
           <i class="fas fa-user-circle fa-fw"></i>
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-          <a class="dropdown-item" href="#">Profile Settings</a>
+          <a class="dropdown-item" a href="#" data-toggle="modal" data-target="#user-profileModal">User Profile</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">Logout</a>
         </div>
       </li>
     </ul>
-  
   </nav>
+
+  <div class="modal fade" id="user-profileModal" role="dialog">
+    <div class="modal-dialog">
+    <div class="modal-content">
+      <app-user-profile></app-user-profile>
+    </div>
+  </div>
+</div>
+
 <!-- Logout Modal-->
 <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
