Fixed the html and css display for adding a new transaction inside portfolio

--- a/src/app/component/portfolio/add-asset/add-asset.component.css
+++ b/src/app/component/portfolio/add-asset/add-asset.component.css
@@ -1,4 +1,13 @@
- /* Customize the label (the radioButton) */
+/* Main body*/
+#portfoliodashboard-content{
+  padding-left: 100px;
+  padding-top: -25px;
+  padding-bottom: 125px;
+  width: 100%;
+  background-color: antiquewhite;
+}
+
+/* Customize the label (the radioButton) */
  .radioButton {
     display: block;
     position: relative;
