--- a/src/app/component/portfolio/portfolioDashboard/portfolio.component.html
+++ b/src/app/component/portfolio/portfolioDashboard/portfolio.component.html
@@ -11,7 +11,7 @@
                   <a routerLink="myPortfolio" class="btn btn-light btn-sm" role="button" routerLinkActive="active">Current Assets</a> 
               </li>
               <li class="nav-item">
-                <a routerLink="myPortfolio/addAsset" class="btn btn-light btn-sm" role="button" routerLinkActive="active">Enter New Transaction (Asset)</a>
+                <a routerLink="/portfolio/myPortfolio/addAsset" class="btn btn-light btn-sm" role="button" >Enter New Transaction (Asset)</a>
               </li>
           </ul>
           <hr>
