fixed routing issues with portfolio buttons, fixed css and html with asset-details + current-portfolio components

--- a/src/app/component/portfolio/current-portfolio/current-portfolio.component.css
+++ b/src/app/component/portfolio/current-portfolio/current-portfolio.component.css
@@ -1,8 +1,9 @@
 #current-portfolio-content{
     padding-left: 200px;
-    padding-top: 56px;
-    padding-bottom: 50px;
+    padding-top: -25px;
+    padding-bottom: 125px;
     width: 100%;
+    background-color: antiquewhite;
 }
 
 table, th, td
