--- a/src/app/component/portfolio/asset-details/asset-details.component.css
+++ b/src/app/component/portfolio/asset-details/asset-details.component.css
@@ -1,26 +1,22 @@
 #asset-details-content{
     padding-left: 200px;
-    padding-top: 56px;
+    padding-top: 5px;
     padding-bottom: 50px;
     width: 100%;
 }
 
 #container {
     height: 100%;
-    width: 200%;
     display: flex;
   }
 
   #leftForm {
-    width: 100%;
-    background-color: blue;
+    background-color: royalblue;
   }
   #rightForm {
-    width: 100%;
-    background-color: green;
+    background-color: tan;
   }
   #middleForm {
-    width: 10%;
     background-color: white;
     
   }
@@ -42,11 +38,11 @@
   #heading {
     text-align: center;
     font-size: 16pt;
-    color: yellowgreen;
+    color: black;
   }
 
   #heading2 {
-    text-align: right;
+    text-align: center;
     font-size: 24pt;
     color: black;
   }
