--- a/src/app/component/portfolio/portfolioDashboard/portfolio.component.html
+++ b/src/app/component/portfolio/portfolioDashboard/portfolio.component.html
@@ -8,7 +8,7 @@
           <h1>My Portfolio</h1>
           <ul class="nav justify-content-center">
               <li class="nav-item">
-                  <a routerLink="myPortfolio" class="btn btn-light btn-sm" role="button" routerLinkActive="active">Current Assets</a> 
+                  <a routerLink="/portfolio/myPortfolio" class="btn btn-light btn-sm" role="button" routerLinkActive="active">Current Assets</a> 
               </li>
               <li class="nav-item">
                 <a routerLink="/portfolio/myPortfolio/addAsset" class="btn btn-light btn-sm" role="button" >Enter New Transaction (Asset)</a>
