--- a/src/app/component/user-profile/user-profile.component.html
+++ b/src/app/component/user-profile/user-profile.component.html
@@ -9,7 +9,6 @@
     <div class="form-group">
       <label for="alterEgo">Password</label>
       <input type="password" class="form-control" id="password" required [(ngModel)]="user.password" name="password" #password="ngModel" disabled>
-        <button type="button" class="btn btn-dark" href="#" data-toggle="modal" data-target="#changePasswordModal">Save</button>
     </div>
 
     <div class="form-group">
@@ -49,13 +48,61 @@
     <div class="form-group">
       <label for="alterEgo">Recovery Answer</label>
       <input type="text" class="form-control" id="recoveryAnswer" [(ngModel)]="user.recoveryAnswer" name="recoveryAnswer" #recoveryAnswer="ngModel" disabled>
-      <!-- <div [hidden]="recoveryAnswer.valid || recoveryAnswer.pristine"
+      <div [hidden]="recoveryAnswer.valid || recoveryAnswer.pristine"
              class="alert alert-danger">
              recoveryAnswer is required
-        </div> -->
+        </div>
     </div>
-
-    <button type="button" class="btn btn-dark" (click)="updateUser()" data-dismiss="modal">Save</button>
-
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" (click)="updateUser()" data-dismiss="modal">Save</button>
+      <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+      <button type="button" class="btn btn-dark" href="#" data-toggle="modal" data-target="#changePasswordModal">Change password</button>
+    </div>
   </form>
 </div>
+
+<div class="modal fade" id="changePasswordModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+        </div>
+<div class="container">
+  <h1>Change password</h1>
+  <form #registrationForm="ngForm">
+    <div class="form-group">
+      <label for="alterEgo">Password</label>
+      <input type="text" class="form-control" id="password" required [(ngModel)]="user.password" name="password" #password="ngModel">
+    </div>
+
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" (click)="updateUser()" data-dismiss="modal">Save</button>
+      <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+      <!-- <button type="button" class="btn btn-dark" href="#" data-toggle="modal" data-target="#changePasswordModal">Save</button> -->
+    </div>
+  </form>
+</div>
+</div>
+</div>
+</div>
+
+<!-- <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body">Are you sure you want to logout?</div>
+        <div class="modal-footer">
+          <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+          <button class="btn btn-secondary" type = button (click) = "logout()">Yes</button>
+        </div>
+     </div>
+  </div>
+</div> -->
