home page update pictures

--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -15,16 +15,20 @@
     <h3 class="margin">What we do</h3><br>
     <div class="row">
       <div class="col-sm-4">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <img src="assets/img/placeholder.png" class="img-responsive margin" style="width:100%" alt="Image">
+        <p><b>FIAT Portfolio Manager</b> - Easy and fast way to control all your assets and trades, generating
+          valuable statistics to support decision</p>
+        <img src="assets/img/stocks1.jpg" class="img-responsive margin" style="width:100%" alt="Image">
       </div>
       <div class="col-sm-4"> 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <img src="assets/img/placeholder.png" class="img-responsive margin" style="width:100%" alt="Image">
+        <p><b>FIAT Advisor</b> - Setup many advisors based on technical analysis and receive smart advices to trade,
+          increasing your chance of success</p>
+        <img src="assets/img/stocks2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
       </div>
       <div class="col-sm-4"> 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <img src="assets/img/placeholder.png" class="img-responsive margin" style="width:100%" alt="Image">
+        <p><b>Smart Dashboard</b> - You have all main information of portfolio and highlights of your advisors in
+          a clean and organized interface
+        </p>
+        <img src="assets/img/portfolio.png" class="img-responsive margin" style="width:100%" alt="Image">
       </div>
     </div>
   </div>
