--- a/src/app/component/user-profile/user-profile.component.html
+++ b/src/app/component/user-profile/user-profile.component.html
@@ -65,16 +65,16 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Change password?</h5>
         <button class="close" type="button" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">×</span>
         </button>
         </div>
 <div class="container">
-  <h1>Change password</h1>
+  
   <form #registrationForm="ngForm">
     <div class="form-group">
-      <label for="alterEgo">Password</label>
+      <label for="alterEgo">New Password</label>
       <input type="text" class="form-control" id="password" required [(ngModel)]="user.password" name="password" #password="ngModel">
     </div>
 
@@ -88,21 +88,3 @@
 </div>
 </div>
 </div>
-
-<!-- <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">×</span>
-          </button>
-        </div>
-        <div class="modal-body">Are you sure you want to logout?</div>
-        <div class="modal-footer">
-          <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <button class="btn btn-secondary" type = button (click) = "logout()">Yes</button>
-        </div>
-     </div>
-  </div>
-</div> -->
