--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<router-outlet></router-outlet>
+<app-nav></app-nav>
+  <div id = "wrapper">
+    <app-sidebar></app-sidebar>
+    <router-outlet></router-outlet>
+  </div>
+<app-footer></app-footer>
 
