--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -8,7 +8,7 @@
     
         <div class="form-group">
           <label for="password2">Password</label>
-          <input type="text" class="form-control" id="password2" required [formControl] = "password2">
+          <input type="password" class="form-control" id="password2" required [formControl] = "password2">
         </div>
     
         <button type="button" class="btn btn-dark" (click)="login()" data-dismiss="modal">Login</button>
