--- a/src/app/component/nav/nav.component.html
+++ b/src/app/component/nav/nav.component.html
@@ -11,7 +11,7 @@
       </li>
       <li class="nav-item dropdown no-arrow">
         <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          {{user.firstname}} {{user.lastname}}
+          <span *ngIf=user>{{user.firstname}} {{user.lastname}}</span>
           <i class="fas fa-user-circle fa-fw"></i>
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
